@@ -1,0 +1,98 @@
+name: weftend-artifact-meter
+
+on:
+  workflow_dispatch:
+    inputs:
+      target_path:
+        description: "Repository path to analyze (file or folder)"
+        required: true
+        default: "package.json"
+        type: string
+      adapter:
+        description: "Adapter selection for safe-run"
+        required: true
+        default: "auto"
+        type: choice
+        options:
+          - auto
+          - none
+          - archive
+          - package
+          - extension
+          - iac
+          - cicd
+          - document
+          - container
+          - image
+          - scm
+          - signature
+      baseline_path:
+        description: "Optional second repository path to compare against target_path"
+        required: false
+        default: ""
+        type: string
+
+permissions:
+  contents: read
+
+jobs:
+  meter:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Compile
+        run: npm run compile --silent
+
+      - name: Safe-run target
+        run: npm run weftend -- safe-run "${{ inputs.target_path }}" --out out/ci_meter/current --withhold-exec --adapter "${{ inputs.adapter }}"
+
+      - name: Safe-run baseline (optional)
+        if: ${{ inputs.baseline_path != '' }}
+        run: npm run weftend -- safe-run "${{ inputs.baseline_path }}" --out out/ci_meter/baseline --withhold-exec --adapter "${{ inputs.adapter }}"
+
+      - name: Compare current vs baseline (optional)
+        if: ${{ inputs.baseline_path != '' }}
+        run: npm run weftend -- compare out/ci_meter/baseline out/ci_meter/current --out out/ci_meter/compare
+
+      - name: Publish summary
+        run: |
+          {
+            echo "## WeftEnd Artifact Meter"
+            echo ""
+            echo "- target_path: \`${{ inputs.target_path }}\`"
+            echo "- adapter: \`${{ inputs.adapter }}\`"
+            if [ -n "${{ inputs.baseline_path }}" ]; then
+              echo "- baseline_path: \`${{ inputs.baseline_path }}\`"
+            fi
+            echo ""
+            if [ -f out/ci_meter/current/report_card.txt ]; then
+              echo "### Current report card"
+              echo '```txt'
+              sed -n '1,40p' out/ci_meter/current/report_card.txt
+              echo '```'
+            fi
+            if [ -f out/ci_meter/compare/compare_report.txt ]; then
+              echo ""
+              echo "### Compare report"
+              echo '```txt'
+              sed -n '1,40p' out/ci_meter/compare/compare_report.txt
+              echo '```'
+            fi
+          } >> "$GITHUB_STEP_SUMMARY"
+
+      - name: Upload WeftEnd artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: weftend-artifact-meter
+          path: out/ci_meter
+          if-no-files-found: error
